# Mind-Boggling

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Makefile  README.md  build.sh  test.cpp
.github/workflows/: build.yml  linter.yml  test.yml
BoardLetter/: BoardLetter.hpp  factory.hpp
Dockerfiles/building/: Dockerfile
Dockerfiles/linter/: Dockerfile
Dockerfiles/tester/: Dockerfile
LetterNode/: LetterNode.hpp  factory.hpp
Trie/: Trie.cpp  Trie.hpp
linting/: Dockerfile  entrypoint.sh
src/: CMakeLists.txt  main.cpp  test.cpp
src/Board/: Board.cpp  Board.hpp  factory.cpp  factory.hpp
src/LetterNode/: LetterNode.cpp  LetterNode.hpp  factory.cpp  factory.hpp
src/Solver/: Solver.cpp  Solver.hpp  factory.cpp  factory.hpp
src/Trie/: Trie.cpp  Trie.hpp  factory.cpp  factory.hpp
src/TrieFiller/: TrieFiller.cpp  TrieFiller.hpp
src/timeit/: timeit.cpp  timeit.hpp
test/: CMakeLists.txt  test.cpp
